--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": ["dom", "ES2015", "ES2016", "ES2017", "ES2018", "ES2019", "ES2020", "dom.iterable", "esnext"],
     "allowJs": true,
     "jsx": "react-jsx",
+    "types": ["@emotion/react/types/css-prop"],
     "sourceMap": true,
     "isolatedModules": true,
     "strict": true,
