--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "browser": "./browser/specific/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --env development --open --hot",
+    "dev": "webpack-dev-server --env development --hot",
     "start": "webpack --env development",
     "build:page": "webpack --env production",
     "build:module": "webpack --env module"
@@ -46,6 +46,7 @@
     "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.8.1",
     "ts-loader": "^9.4.2",
+    "tsconfig-paths-webpack-plugin": "^4.0.0",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
