--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   "homepage": "https://github.com/hyeonQyu/tableditor-react#readme",
   "dependencies": {
     "@emotion/react": "^11.10.5",
+    "@types/lodash": "^4.14.191",
+    "loadash": "^1.0.0",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
