feat: Add more option button - Set button visible when hover the cell - Set button translucent when there is inner text on cell

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
       "@defines/*": ["lib/defines/*"],
       "@hooks/*": ["lib/hooks/*"],
       "@utils/*": ["lib/utils/*"],
+      "@icons/*": ["lib/icons/*"],
       "@pages/*": ["pages/*"],
       "@styles/*": ["styles/*"]
     },
