--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,5 @@
   "useTabs": false,
   "semi": true,
   "singleQuote": true,
-  "trailingComma": "all",
-  "jsxSingleQuote": true
+  "trailingComma": "all"
 }
